--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "date-fns": "^3.0.6",
     "react-hot-toast": "^2.4.1",
     "recharts": "^2.10.3",
-    "clsx": "^2.0.0"
+    "clsx": "^2.0.0",
+    "leaflet": "^1.9.4",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
